[metadata]
name = metanetx-sdk
url = https://github.com/Midnighter/metanetx-sdk
download_url = https://pypi.org/project/metanetx-sdk/
author = Moritz E. Beber
author_email = midnighter@posteo.net
# Please consult https://pypi.org/classifiers/ for a full list.
classifiers =
    Development Status :: 2 - Pre-Alpha
    Intended Audience :: Science/Research
    License :: OSI Approved :: Apache Software License
    Natural Language :: English
    Operating System :: MacOS :: MacOS X
    Operating System :: Microsoft :: Windows :: Windows 10
    Operating System :: POSIX
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3 :: Only
    Topic :: Scientific/Engineering :: Bio-Informatics
license = Apache-2.0
description = Parse and prepare information from https://metanetx.org.
long_description = file: README.rst
keywords =
    MetaNetX
    SDK
    MIRIAM
    Identifiers.org

[options]
zip_safe = True
install_requires =
    aioftp
    click
    click-log
    depinfo
    pandas
    pydantic
    python-dateutil
    pytz
    toml
python_requires = >=3.7
tests_require =
    tox
packages = find:
package_dir =
     = src

[options.packages.find]
where = src

[options.package_data]
metanetx_sdk.data =
	*.toml
    *.tsv

[options.entry_points]
console_scripts =
    metanetx = metanetx_sdk.cli.cli:cli

[options.extras_require]
development =
    black
    isort
    tox

[bdist_wheel]
universal = 1

# See the docstring in versioneer.py for instructions. Note that you must
# re-run 'versioneer.py setup' after changing this section, and commit the
# resulting files.

[versioneer]
VCS = git
style = pep440
versionfile_source = src/metanetx_sdk/_version.py
versionfile_build = metanetx_sdk/_version.py
tag_prefix =
parentdir_prefix = metanetx-sdk-

