[metadata]
name = metanetx-sdk
url = https://github.com/Midnighter/metanetx-sdk
download_url = https://pypi.org/project/metanetx-sdk/
project_urls =
    Source Code = https://github.com/Midnighter/metanetx-sdk
    Bug Tracker = https://github.com/Midnighter/metanetx-sdk/issues
author = Moritz E. Beber
author_email = midnighter@posteo.net
# Please consult https://pypi.org/classifiers/ for a full list.
classifiers =
    Development Status :: 4 - Beta
    Environment :: Console
    Intended Audience :: Science/Research
    License :: OSI Approved :: Apache Software License
    Natural Language :: English
    Operating System :: OS Independent
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Topic :: Scientific/Engineering :: Bio-Informatics
    Typing :: Typed
license = Apache-2.0
description = Parse and clean up information from MetaNetX (https://metanetx.org).
long_description = file: README.rst
long_description_content_type = text/x-rst
keywords =
    MetaNetX
    SDK
    MIRIAM
    Identifiers.org

[options]
zip_safe = True
install_requires =
    aioftp~=0.13
    click~=7.0
    click-log~=0.3
    depinfo~=1.5
    pandas~=1.0
    pydantic~=1.4
    python-dateutil~=2.8
    pytz~=2019.3
    toml~=0.10
python_requires = >=3.8
tests_require =
    tox
packages = find:
package_dir =
     = src

[options.packages.find]
where = src

[options.package_data]
metanetx_sdk.data =
    *.toml
    *.tsv

[options.entry_points]
console_scripts =
    mnx-sdk = metanetx_sdk.cli.cli:cli

[options.extras_require]
reporting =
    humanize
    ipywidgets
    jupyterlab
    papermill
    plotly
development =
    black
    isort
    pep517
    tox
    twine

[bdist_wheel]
universal = 1

# See the docstring in versioneer.py for instructions. Note that you must
# re-run 'versioneer.py setup' after changing this section, and commit the
# resulting files.

[versioneer]
VCS = git
style = pep440
versionfile_source = src/metanetx_sdk/_version.py
versionfile_build = metanetx_sdk/_version.py
tag_prefix =

